# AIDL-

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/suxinwei/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/alibaba/alipay/: ThirdPartPayAction.aidl  ThirdPartPayResult.aidl
app/src/main/aidl/com/heytap/smarthome/domain/net/cloudstorage/: NetCallback.aidl  NetManager.aidl
app/src/main/java/com/suxinwei/demo/: Client2Activity.java  ClientActivity.java  Fruit.java  FruitAdapter2.java  MainActivity.java  SecondActivity.java  SimpleBaseAdapter.java
app/src/main/java/com/suxinwei/demo/data/: LoginDataSource.java  LoginRepository.java  Result.java
app/src/main/java/com/suxinwei/demo/data/model/: LoggedInUser.java
app/src/main/java/com/suxinwei/demo/ui/login/: LoggedInUserView.java  LoginActivity.java  LoginFormState.java  LoginResult.java  LoginViewModel.java  LoginViewModelFactory.java
app/src/main/jni/: test.c
app/src/main/res/layout/: activity_client.xml  item_fruit.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/suxinwei/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
